force-app/main/default/objects/ApexJobRequest__c/ApexJobRequest__c.object-meta.xml
<CustomObject>
    <description>A request to execute a specific Apex job</description>
    <label>Apex Job Request</label>
    <nameField>
        <displayFormat>AJR-{00000000}</displayFormat>
        <label>Apex Job Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Job Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>