force-app/main/default/objects/ApexJobRequest__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>The name of the Apex class representing the job to execute</description>
    <inlineHelpText>The name of the Apex class representing the job to execute</inlineHelpText>
    <label>Apex Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>