force-app/main/default/objects/ApexJobRequest__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The JSON body of the request, which should be able to be deserialized into a new instance of the requested job</description>
    <inlineHelpText>The JSON body of the request, which should be able to be deserialized into a new instance of the requested job</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>