force-app/main/default/objects/ApexJobRequest__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Exception.getMessage()</description>
    <inlineHelpText>Exception.getMessage()</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>