force-app/main/default/objects/ApexJobRequest__c/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <description>Exception.getStackTraceString()</description>
    <inlineHelpText>Exception.getStackTraceString()</inlineHelpText>
    <label>Error Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>