force-app/main/default/objects/ApexJobRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&#39;Submitted&#39;</defaultValue>
    <description>The current status of the request. A request starts in &quot;Submitted&quot;, after the request is processed the status will change to either &quot;Success&quot; or &quot;Error&quot;.</description>
    <inlineHelpText>The current status of the request</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>